refactor: 修改版本发布配置以及产物命名